# ngsd

./: .gitignore  CMakeLists.txt  README.md
src/: ngsd.h
test/: ngsd_test.cpp
